# comp-math-2025

./: README.md
lb1/: CMakeLists.txt  README.md
lb1/src/: main.cpp  test.cpp
lb1/src/compute/: solver.cpp  solver.h
lb1/src/controller/: app.cpp  app.h
lb1/src/glad/: glad.c
lb1/src/model/: camera.cpp  camera.h  cube.cpp  cube.h  scene.cpp  scene.h
lb1/src/old_ver/: main.cpp  test.cpp
lb1/src/old_ver/include/: brick.h  solver.h  system.h
lb1/src/old_ver/lib/: brick.cpp  system.cpp
lb1/src/shaders/: fragment.txt  vertex.txt
lb1/src/view/: cube_mesh.cpp  cube_mesh.h  renderer.cpp  renderer.h  resource_load.cpp  resource_load.h
lb2/: README.md  e_exp.c  e_exp_data.c  math_config.h
lb3/: README.md  main.cpp
